@@ -33,6 +33,9 @@
 	(engine_get_decrypted_input): The port driver still wants the length
 	argument. This should be fixed!
 
+	* src/compat/tls.erl: Synchronize this compat module with the latest
+	version from ejabberd (revision 1344).
+
 2008-06-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	With these changes, ejabberd 2.0.x can run without modifications with
